Fixed alignment on the table header.

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -287,6 +287,14 @@ button {
    padding: 5px 10px;
 }
 
+th {
+  text-align: center!important;
+}
+
+td {
+  vertical-align: middle!important;
+}
+
 #dataTable th{
   vertical-align:middle;
 }
